Fixed bug 16620: Contact collect folder can now be enabled again because options are always visible.